--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
